--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-progress": "^3.6.0",
+    "react-native-snackbar-component": "^1.1.0",
     "react-native-web": "^0.11.4",
+    "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^16.8.24",
     "@types/react-native": "^0.60.2",
     "babel-preset-expo": "^6.0.0",
+    "react-native-cli": "^2.0.1",
     "react-native-typescript-transformer": "^1.2.13",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
