--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-card-flip": "^1.0.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-progress": "^3.6.0",
     "react-native-snackbar-component": "^1.1.0",
@@ -21,6 +22,7 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
